# cpuidpp

./: CMakeLists.txt  README.md  cpuid++.pc.in
include/: core.hpp  cpuid.hpp  feature.hpp  frequency.hpp
src/: cpuid.cpp  feature.cpp  frequency.cpp
test/: CMakeLists.txt  main.cpp
